@@ -74,17 +74,28 @@
 <!-- <td colspan="3"><a href="&site;/data/doc/gstreamer/devel/gstreamer-libs/html/">HTML</a></td> -->
  <td colspan="3"><a href="&site;/data/doc/gstreamer/stable/gstreamer-libs/html/">HTML</a></td>
 </tr>
+</table>
+
+<table width="95%" border="1" cellspacing="0" cellpadding="2">
+
+<h2>GStreamer Plugins-Base Module Libraries Reference</h2>
+
+<tr>
+ <th>document</th>
+ <th colspan="3">HEAD</th>
+<!-- <th colspan="3">devel &gst-version-devel;</th> -->
+ <th colspan="3">stable &gst-plugins-base-version-stable;</th>
+</tr>
 
 <tr>
  <td>GStreamer Base Plugins Libraries Reference</td>
  <td colspan="3"><a href="&site;/data/doc/gstreamer/head/gst-plugins-base-libs/html/">HTML</a></td>
-<!-- <td colspan="3"><a href="&site;/data/doc/gstreamer/devel/gstreamer-libs/html/">HTML</a></td> -->
- <td colspan="3">&#160;</td>
+<td colspan="3"><a href="&site;/data/doc/gstreamer/&gst-plugins-base-version-stable;/gst-plugins-base-libs/html/">HTML</a></td>
 </tr>
 
 </table>
 
-<h2>Plugins</h2>
+<h2>Plugin Modules</h2>
 
 <table width="95%" border="1" cellspacing="0" cellpadding="2">
 
